--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,21 @@
 /*TODO - figure out why firefox resizes the landing page and the CV page, but not the other pages*/
 /*TODO - make sure edge and chrome stop auto starting animations*/
 
-/*Need Media Breakpoints*/
+/*Different Media Breakpoints, copied and pasted from https://www.w3schools.com/howto/howto_css_media_query_breakpoints.asp*/
+ /* Extra small devices (phones, 600px and down) */
+ @media only screen and (max-width: 600px) {}
 
+ /* Small devices (portrait tablets and large phones, 600px and up) */
+ @media only screen and (min-width: 600px) {}
+ 
+ /* Medium devices (landscape tablets, 768px and up) */
+ @media only screen and (min-width: 768px) {}
+ 
+ /* Large devices (laptops/desktops, 992px and up) */
+ @media only screen and (min-width: 992px) {}
+ 
+ /* Extra large devices (large laptops and desktops, 1200px and up) */
+ @media only screen and (min-width: 1200px) {} 
 
 /*Universal Body Modifier*/
 body {
