--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,8 @@
 
 /*Different Media Breakpoints, copied and pasted from https://www.w3schools.com/howto/howto_css_media_query_breakpoints.asp*/
 /*This setup of breakpoints makes the site work for all the available devices on chrome and firefox (except, ironically, the chrome desktop browser)*/
+/*Most of the breakpoint work is just resizing text and making sure the content doesn't flow of the screen*/
+
 /* Extra small devices (phones, 600px and down) */
  @media only screen and (max-width: 600px) 
     {   /*Solves the issues with the big ponts being too big and the small fonts being too small*/
@@ -52,12 +54,14 @@
  @media only screen and (min-width: 601px) {
     body/*Fonts too small to read, made them bigger*/
     {
-    width: 100%;
+    width: 100%;/*font on the landing page too large*/
     font-size: 45%;
     }
+    /*blog reformatting*/
    .PostContent{
         font-size: 150%;
     }
+    /*portfolio reformatting*/
     .PortfolioProjectBlurb{
         font-size: 150%;
     }
@@ -70,6 +74,7 @@
     .PortfolioProjectBlurb{
         font-size: 230%;
     }
+    /*About me reformatting*/
     .resumeContent{
         font-size: 190%;
     }
@@ -81,6 +86,7 @@
     body{
         width: 95%;
     }
+    /*blog reformatting*/
     .ABlogPost{
         max-width: 95%;
     }
@@ -90,6 +96,7 @@
     .postTitle{
         font-size: 200%;
     }
+    /*portfolio reformatting*/
     .PortfolioProjectTitleSection{
         font-size: 240%;
     }
@@ -99,16 +106,18 @@
     .PortfolioProjectBlurb{
         font-size: 230%;
     }
+    /*about me reformatting*/
     .resumeContent{
         font-size: 190%;
     }
  }
+ /*remaining screen sizes work fine*/
 
 /*Universal Body Modifier*/
 body {
     font-family: 'Roboto Condensed', sans-serif;/*google font choice. this can always change later*/
     background-color: #02052e;/*dark blue. I think it needs to be broken up with a background pic or with some mouse effects, or a noise modifier, or some combination of the above*/
-    color: #e8eaff;/*contrasts nicely*/
+    color: #e8eaff;/*contrasts nicely, with just a hint of purple to stay on theme*/
   /* overflow-x: hidden;/*attempt number one to fix the scale issue with firefox. It didn't work*/ 
     width: 95vw;/*so this solves the changing width problem on Firefox and edge (thankyou Michael), but not on chrome*/
     padding: 1rem;
