--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,12 @@
         font-size: 190%;
     }
  }
+
+ @media only screen and (min-width:1100px){
+     .resumeContent{
+         font-size: 500%;
+     }
+ }
  /*remaining screen sizes work fine*/
 
 /*Universal Body Modifier*/
