--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,7 @@
         font-size: 190%;
     }
  }
-
+/*added an additional breakpoint to fix the CV page on large screens as it was being really small for some unknown reason*/
  @media only screen and (min-width:1100px){
      .resumeContent{
          font-size: 500%;
